Added Quantum Deflection ability to Obelisk

--- a/Mod/Data/Core/Languages/English/Actions.xml
+++ b/Mod/Data/Core/Languages/English/Actions.xml
@@ -46,5 +46,8 @@
     <entry name="Necrons/AggressionOverrides" value="<string name='Traits/Necrons/AggressionOverrides'/>"/>
 	<entry name="Necrons/AggressionOverridesDescription" value="Permanently increases Canoptek Spyder's hit points, armour penetration and damage."/>
 	<entry name="Necrons/AggressionOverridesFlavor" value="<string name='Traits/Necrons/AggressionOverridesFlavor'/>"/>
+    <entry name="Necrons/QuantumDeflection" value="<string name='Traits/Necrons/QuantumDeflection'/>"/>
+    <entry name="Necrons/QuantumDeflectionDescription" value="<string name='Traits/Necrons/QuantumDeflectionDescription'/>"/>
+    <entry name="Necrons/QuantumDeflectionFlavor" value="<string name='Traits/Necrons/QuantumDeflectionFlavor'/>"/>
     <entry name="Eldar/ActivateWebwayGateDescription" value="Activates and claims a neutral Webway Gate. Must be within 3 tiles of friendly Eldar unit."/>
 </language>
