--- a/Mod/Data/Core/Languages/English/Units.xml
+++ b/Mod/Data/Core/Languages/English/Units.xml
@@ -7,6 +7,8 @@
 	<entry name="SpaceMarines/KillTeamEliminatorsDescription" value="Cloaked infantry unit equipped to bring down any target."/>
 	<entry name="SpaceMarines/KillTeamEliminatorsFlavor" value="Once marked, there is nowhere for an Eliminator's prey to hide, and no amount of protective armour that can stop the killing shot."/>
 
+	<entry name="Necrons/ObeliskDescription" value="Super-heavy skimmer unit with powerful anti-air capabilities that protects nearby allied infantry units."/>
+
 	<entry name="Eldar/HornetDescription" value="Fast reconnaissance skimmer unit that can clear tiles."/>
 
 	<entry name="AdeptusMechanicus/IronstriderBallistariusDescription" value="Doctrina Imperatives fast walker unit equipped with las-cannon."/>
