--- a/Mod/Data/Core/Languages/English/Units.xml
+++ b/Mod/Data/Core/Languages/English/Units.xml
@@ -9,6 +9,9 @@
 
 	<entry name="Necrons/ObeliskDescription" value="Super-heavy skimmer unit with powerful anti-air capabilities that protects nearby allied infantry units."/>
 
+	<entry name="Eldar/Autarch" value="Autarch"/>
+	<entry name="Eldar/AutarchDescription" value="Psyker hero unit that leads the Aeldari charge."/>
+	<entry name="Eldar/AutarchFlavor" value="Autarchs have a consummate understanding of the way of the warrior, and the future of the race has been shaped by their excellence in the arts of death. They follow the Path of Command, gaining a wider appreciation of battle than any other and directing the warhost on the most efficient path to victory. Theirs is a burning obsession to see war itself conquered and made subservient to their will."/>
 	<entry name="Eldar/HornetDescription" value="Fast reconnaissance skimmer unit that can clear tiles."/>
 
 	<entry name="AdeptusMechanicus/IronstriderBallistariusDescription" value="Doctrina Imperatives fast walker unit equipped with las-cannon."/>
