--- a/Mod/Data/Core/Languages/English/Traits.xml
+++ b/Mod/Data/Core/Languages/English/Traits.xml
@@ -117,33 +117,37 @@
     <entry name="Necrons/JudgementOfTheTriarchDescription" value="Decreases melee attacks."/>
     <entry name="Necrons/JudgementOfTheTriarchFlavor" value="Those who defy the will of the Final Triarch are subject to swift and merciless retribution."/>
     <entry name="Necrons/BloodyCrusadeUnit" value="Bloody Crusade (Aura)"/>
-	<entry name="Necrons/BloodyCrusadeUnitDescription" value="Increases melee attacks."/>
-	<entry name="Necrons/HousingBuildingBonusDescription" value="Increases the population limit. Increases damage reduction of units in cities."/>
+    <entry name="Necrons/BloodyCrusadeUnitDescription" value="Increases melee attacks."/>
+    <entry name="Necrons/HousingBuildingBonusDescription" value="Increases the population limit. Increases damage reduction of units in cities."/>
     <entry name="Necrons/MethodicalDestruction" value="Methodical Destruction"/>
     <entry name="Necrons/MethodicalDestructionDescription" value="Increases the accuracy."/>
     <entry name="Necrons/MethodicalDestructionFlavor" value="The Dynasty excel in systematic killing, marking each target then concentrating their fury upon it until it is completely obliterated."/>
-	<entry name="Necrons/CountertemporalNanomines" value="Countertemporal Nanomines"/>
-	<entry name="Necrons/CountertemporalNanominesDescription" value="Immobilized."/>
-	<entry name="Necrons/CountertemporalNanominesFlavor" value="Released from a hive-gem about the bearer’s person, a swarm of nanoscarabs sweep out and lace the ground before them with microscopic temporal charges. Foes advancing into this invisible minefield find reality stuttering and glitching around them as they trigger one minute chronofault after another."/>
+    <entry name="Necrons/CountertemporalNanomines" value="Countertemporal Nanomines"/>
+    <entry name="Necrons/CountertemporalNanominesDescription" value="Immobilized."/>
+    <entry name="Necrons/CountertemporalNanominesFlavor" value="Released from a hive-gem about the bearer’s person, a swarm of nanoscarabs sweep out and lace the ground before them with microscopic temporal charges. Foes advancing into this invisible minefield find reality stuttering and glitching around them as they trigger one minute chronofault after another."/>
     <entry name="Necrons/CunningAdvisors" value="Cunning Advisors"/>
-	<entry name="Necrons/CunningAdvisorsDescription" value="Greatly increases research output."/>
-	<entry name="Necrons/CunningAdvisorsFlavor" value="The greater a Necron nobles reputation, the more cunning and accomplished are the Crypteks who seek them out and offer them service."/>
+    <entry name="Necrons/CunningAdvisorsDescription" value="Greatly increases research output."/>
+    <entry name="Necrons/CunningAdvisorsFlavor" value="The greater a Necron nobles reputation, the more cunning and accomplished are the Crypteks who seek them out and offer them service."/>
     <entry name="Necrons/AggressionOverrides" value="Aggression Overrides"/>
-	<entry name="Necrons/AggressionOverridesDescription" value="Increases Canoptek Spyder's hit points, armour penetration and damage."/>
-	<entry name="Necrons/AggressionOverridesFlavor" value="Canoptek Spyders are generally docile creatures, diligently maintaining their tomb complex. However, when roused to battle, their aggression engrams ensure they are truly formidable foes."/>
+    <entry name="Necrons/AggressionOverridesDescription" value="Increases Canoptek Spyder's hit points, armour penetration and damage."/>
+    <entry name="Necrons/AggressionOverridesFlavor" value="Canoptek Spyders are generally docile creatures, diligently maintaining their tomb complex. However, when roused to battle, their aggression engrams ensure they are truly formidable foes."/>
     <entry name="Necrons/QuantumDeflection" value="Quantum Deflection"/>
-	<entry name="Necrons/QuantumDeflectionDescription" value="Increases the invulnerable damage reduction."/>
+    <entry name="Necrons/QuantumDeflectionDescription" value="Increases the invulnerable damage reduction."/>
     <entry name="Necrons/QuantumDeflectionFlavor" value="Necron quantum shielding is a true marvel of techno-arcana, phasing into existence at the moment of impact and capable of adaptive remodulation to diffuse and deflect even the most powerful enemy attacks."/>
-	<entry name="Necrons/QuantumDeflectionStrong" value="Quantum Deflection (Range 1)"/>
-	<entry name="Necrons/QuantumDeflectionStrongDescription" value="<string name='Traits/Necrons/QuantumDeflectionDescription'/>"/>
+    <entry name="Necrons/QuantumDeflectionStrong" value="Quantum Deflection (Range 1)"/>
+    <entry name="Necrons/QuantumDeflectionStrongDescription" value="<string name='Traits/Necrons/QuantumDeflectionDescription'/>"/>
     <entry name="Necrons/QuantumDeflectionStrongFlavor" value="<string name='Traits/Necrons/QuantumDeflectionFlavor'/>"/>
-	<entry name="Necrons/QuantumDeflectionWeak" value="Quantum Deflection (Range 2)"/>
-	<entry name="Necrons/QuantumDeflectionWeakDescription" value="<string name='Traits/Necrons/QuantumDeflectionDescription'/>"/>
+    <entry name="Necrons/QuantumDeflectionWeak" value="Quantum Deflection (Range 2)"/>
+    <entry name="Necrons/QuantumDeflectionWeakDescription" value="<string name='Traits/Necrons/QuantumDeflectionDescription'/>"/>
     <entry name="Necrons/QuantumDeflectionWeakFlavor" value="<string name='Traits/Necrons/QuantumDeflectionFlavor'/>"/>
-	<entry name="Necrons/AggressionOverridesDescription" value="Increases Canoptek Spyder's hit points, armour penetration and damage."/>
-	<entry name="Necrons/AggressionOverridesFlavor" value="Canoptek Spyders are generally docile creatures, diligently maintaining their tomb complex. However, when roused to battle, their aggression engrams ensure they are truly formidable foes."/>
+    <entry name="Necrons/AggressionOverridesDescription" value="Increases Canoptek Spyder's hit points, armour penetration and damage."/>
+    <entry name="Necrons/AggressionOverridesFlavor" value="Canoptek Spyders are generally docile creatures, diligently maintaining their tomb complex. However, when roused to battle, their aggression engrams ensure they are truly formidable foes."/>
 
     <entry name="Fright" value="Fright"/>
-	<entry name="FrightDescription" value="Reduces the morale each turn."/>
-	<entry name="FrightFlavor" value="<string name='Actions/AuraOfFearFlavor'/>"/>
+    <entry name="FrightDescription" value="Reduces the morale each turn."/>
+    <entry name="FrightFlavor" value="<string name='Actions/AuraOfFearFlavor'/>"/>
+
+    <entry name="AstraMilitarum/WallOfMuscle" value="Wall Of Muscle"/>
+    <entry name="AstraMilitarum/WallOfMuscleDescription" value="Reduces melee attacks."/>
+    <entry name="AstraMilitarum/WallOfMuscleFlavor" value="“Brute force not work? It because you not use enough of it!“<br/>—Karg, Ogryn Bone'ead"/>
 </language>
