Reworked Commander: metastrategies work only on battlesuits, added jump ability

--- a/Mod/Data/Core/Languages/English/Actions.xml
+++ b/Mod/Data/Core/Languages/English/Actions.xml
@@ -69,4 +69,11 @@
 	<entry name="Tau/StormOfFireDescription" value="Increases the invulnerable damage reduction of the Ethereal."/>
 	<entry name="Tau/SenseOfStoneDescription" value="Increases the damage reduction of the Ethereal and adjacent allied T'au infantry and monstrous creatures."/>
 	<entry name="Tau/CalmOfTidesDescription" value="Restores the hitpoints and the morale of the Ethereal and adjacent allied T'au infantry and monstrous creatures."/>
+
+    <entry name="Tau/CommanderJumpPack" value="<string name='Actions/JumpPack'/>"/>
+    <entry name="Tau/CommanderJumpPackDescription" value="Flies across obstacles to the target tile, ignoring enemy overwatch attacks. Briefly increases the accuracy and the attacks."/>
+    <entry name="Tau/CommanderJumpPackFlavor" value="<string name='Actions/JumpPackFlavor'/>"/>
+	<entry name="Tau/RinyonDescription" value="Metastrategy that increases the accuracy of allied T'au battlesuit units in the area against enemy units adjacent to other allied units. Shares cooldown with other metastrategies."/>
+	<entry name="Tau/KauyonDescription" value="Metastrategy that increases the ranged damage reduction of allied T'au battlesuit units in the area. Shares cooldown with other metastrategies."/>
+
 </language>
