--- a/Mod/Data/Core/Languages/English/Traits.xml
+++ b/Mod/Data/Core/Languages/English/Traits.xml
@@ -154,4 +154,7 @@
     <entry name="Tau/ReactiveThrustSystem" value="Reactive Thrust System"/>
     <entry name="Tau/ReactiveThrustSystemDescription" value="Increases the accuracy and the attacks."/>
     <entry name="Tau/ReactiveThrustSystemFlavor" value="Angled micro-thrusters integrated into battlesuit plating allows their pilots to trigger a sudden burst of speed for interdiction assaults.>"/>
+    <entry name="Tau/FrequencyLock" value="Frequency Lock"/>
+    <entry name="Tau/FrequencyLockDescription" value="Decreases the armour."/>
+    <entry name="Tau/FrequencyLockFlavor" value="Seeker missiles are designed to lock onto the remote targeting beacon provided by a markerlight beam and ride the signal all the way to their target, even bypassing and evading intervening terrain in the process.>"/>
 </language>
