--- a/Mod/Data/Core/Languages/English/Units.xml
+++ b/Mod/Data/Core/Languages/English/Units.xml
@@ -17,4 +17,25 @@
 	<entry name="AdeptusMechanicus/IronstriderBallistariusDescription" value="Doctrina Imperatives fast walker unit equipped with las-cannon."/>
 
 	<entry name="Tau/GunDroneDescription" value="Basic combat drone unit that marks enemies for increased damage."/>
+	<entry name="Tau/BroadsideBattlesuit" value="Broadside Battlesuits"/>
+	<entry name="Tau/GhostkeelBattlesuit" value="Ghostkeel Battlesuit"/>
+	<entry name="Tau/GravInhibitorDrone" value="Grav-Inhibitor Drones"/>
+	<entry name="Tau/InterceptorDrone" value="Interceptor Drones"/>
+	<entry name="Tau/PulseAcceleratorDrone" value="Pulse Accelerator Drones"/>
+	<entry name="Tau/RiptideBattlesuit" value="Riptide Battlesuit"/>
+	<entry name="Tau/ShieldedMissileDrone" value="Shielded Missile Drones"/>
+	<entry name="Tau/SkyRayGunship" value="Sky Ray Gunship"/>
+	<entry name="Tau/StealthBattlesuit" value="Stealth Battlesuits"/>
+	<entry name="Tau/Stormsurge" value="Stormsurge"/>
+	<entry name="Tau/SunSharkBomber" value="Sun Shark Bomber"/>
+	<entry name="Tau/CrisisBattlesuit" value="Crisis Battlesuits"/>
+	<entry name="Tau/Devilfish" value="Devilfish"/>
+	<entry name="Tau/GunDrone" value="Gun Drones"/>
+	<entry name="Tau/HammerheadGunship" value="Hammerhead Gunship"/>
+	<entry name="Tau/Piranha" value="Piranha"/>
+	<entry name="Tau/MarkerDrone" value="Marker Drones"/>
+	<entry name="Tau/RazorsharkStrikeFighter" value="Razorshark Strike Fighter"/>
+	<entry name="Tau/ReconDrone" value="Recon Drones"/>
+	<entry name="Tau/ShieldDrone" value="Shield Drones"/>
+	<entry name="Tau/StealthDrone" value="Stealth Drones"/>
 </language>
