--- a/Mod/Data/Core/Languages/English/Upgrades.xml
+++ b/Mod/Data/Core/Languages/English/Upgrades.xml
@@ -7,7 +7,7 @@
     <entry name="SpaceMarines/KillTeamEliminatorsDescription" value="<string name='Units/SpaceMarines/KillTeamEliminatorsDescription'/>"/>
     <entry name="SpaceMarines/KillTeamEliminatorsFlavor" value="<string name='Units/SpaceMarines/KillTeamEliminatorsFlavor'/>"/>
     <entry name="SpaceMarines/SiegeManeuvers" value="Siege Maneuvers"/>
-    <entry name="SpaceMarines/SiegeManeuversDescription" value="Grants Thunderfire Cannon ability to ignore penalty for firing heavy weapons after movement. Increases Thunderfire Cannon hit points."/>
+    <entry name="SpaceMarines/SiegeManeuversDescription" value="Grants Thunderfire Cannon ability to ignore penalty for firing heavy weapons after movement. Increases Thunderfire Cannon and Scout Bikers hit points. Increases Scout Bikers armour."/>
     <entry name="SpaceMarines/SiegeManeuversFlavor" value="A measured advance allows Thunderfire Cannons to unleash a steady stream of fire."/>
     <entry name="SpaceMarines/DozerBladeDescription" value="Reduces the movement penalty for Hunters, Predators and Razorbacks in forests and imperial ruins. Increases Vindicators armor."/>
     <entry name="SpaceMarines/TeleportHomerDescription" value="Causes orbital deployment to not consume action points when deploying Terminators adjacent to Tactical Space Marines, Scout Bikers or Stormraven Gunships."/>
