Cadre Fireblade rework

--- a/Mod/Data/Core/Languages/English/Traits.xml
+++ b/Mod/Data/Core/Languages/English/Traits.xml
@@ -172,4 +172,9 @@
     <entry name="Tau/FrequencyLock" value="Frequency Lock"/>
     <entry name="Tau/FrequencyLockDescription" value="Decreases the armour."/>
     <entry name="Tau/FrequencyLockFlavor" value="Seeker missiles are designed to lock onto the remote targeting beacon provided by a markerlight beam and ride the signal all the way to their target, even bypassing and evading intervening terrain in the process.>"/>
+    <entry name="Tau/VolleyFireDescription" value="Increases overwatch attacks."/>
+	<entry name="Tau/VolleyFireFlavor" value="“I’m not going to teach you a special deathblow. I’m not going to give you a bigger gun. I’m not going to surround you with magic shield drones willing to die for you. But I am going to teach you to shoot straight, under fire, together. That immediately makes you better than every last Gue’la.”<br/>  — Tutor Sharptongue."/>
+    <entry name="Tau/BreakComposureDescription" value="Increases ranged attacks."/>
+	<entry name="Tau/BreakComposureFlavor" value="Though not physically impressive, the T’au can inculcate fear in their enemies through subtler means—by harrying them so that they can’t focus, by surrounding them, by forcing them down tactical paths that only lead to repeated failure. Sometimes you don’t need to even touch an enemy to defeat them."/>
+
 </language>
