--- a/Mod/Data/Core/Languages/English/Traits.xml
+++ b/Mod/Data/Core/Languages/English/Traits.xml
@@ -178,4 +178,10 @@
     <entry name="Tau/BreakComposureFlavor" value="Though not physically impressive, the T’au can inculcate fear in their enemies through subtler means—by harrying them so that they can’t focus, by surrounding them, by forcing them down tactical paths that only lead to repeated failure. Sometimes you don’t need to even touch an enemy to defeat them."/>
     <entry name="EnhancedStealth" value="Enhanced Stealth"/>
     <entry name="EnhancedStealthDescription" value="Increases the ranged damage reduction while in forest or imperial ruins."/>
+
+    <entry name="Orks/BoltDamageDescription" value="<string name='Traits/AstraMilitarum/BoltDamageDescription'/>"/>
+	<entry name="SpaceMarines/BoltDamage" value="Kraken Bolts"/>
+	<entry name="SpaceMarines/BoltDamageDescription" value="Increases the armour penetration of bolt weapons."/>
+	<entry name="SpaceMarines/BoltDamageFlavor" value="<string name='Traits/AstraMilitarum/BoltDamageFlavor'/>"/>
+
 </language>
